@@ -74,8 +74,10 @@ PUBLIC DECLARE FUNCTION ASC   (BYVAL s AS STRING)  AS INTEGER
 
 ' (dynamic) memory
 
-PUBLIC DECLARE FUNCTION ALLOCATE (BYVAL size AS ULONG, BYVAL flags AS ULONG=0) AS VOID PTR
-PUBLIC DECLARE FUNCTION FRE (BYVAL x AS INTEGER) AS ULONG
+PUBLIC DECLARE FUNCTION ALLOCATE   (BYVAL size AS ULONG, BYVAL flags AS ULONG=0) AS VOID PTR
+PUBLIC DECLARE SUB      DEALLOCATE (p AS VOID PTR)
+PUBLIC DECLARE SUB      _MEMSET    (dst AS BYTE PTR, c AS BYTE, n AS ULONG)
+PUBLIC DECLARE FUNCTION FRE        (BYVAL x AS INTEGER) AS ULONG
 
 PUBLIC DECLARE SUB POKE  (BYVAL adr AS ULONG, BYVAL b AS BYTE)
 PUBLIC DECLARE SUB POKEW (BYVAL adr AS ULONG, BYVAL w AS UINTEGER)
